--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,19 @@ claude_config.json
 claude_logs/
 claude_history/
 .claude/
+
+
+*.txt
+*.md
+*.log
+*.csv
+*.tmp
+*.bak
+*.swp
+
+!requirements.txt
+!package.json
+!pom.xml
+!Makefile
+!README.md
+!LICENSE
