--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # 수동 실행 가능
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -15,11 +15,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup SSH
-        env:
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
@@ -30,21 +28,81 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Docker Image
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          docker build -t ${DOCKERHUB_USERNAME}/krafton_jungle10_team4:latest .
-          docker push ${DOCKERHUB_USERNAME}/krafton_jungle10_team4:latest
-          echo "✅ Docker 이미지 빌드 및 푸시 완료"
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/krafton_jungle10_team4:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/krafton_jungle10_team4:latest
 
-      - name: Create environment file
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+      - name: Create .env.local locally
         run: |
-          ssh ${EC2_USER}@${EC2_HOST} << 'ENVSSH'
-            cd /home/ec2-user/Backend
-            cat > .env.local << 'ENVEOF'
+          cat > .env.production << 'EOF'
+          APP_NAME="FastAPI RAG Backend"
+          APP_VERSION="1.0.0"
+          DEBUG=false
+          LOG_LEVEL=info
+          HOST=0.0.0.0
+          PORT=8001
+          WORKERS=4
+          AWS_REGION=ap-northeast-2
+          CHROMA_HOST=chromadb
+          CHROMA_PORT=8000
+          CHROMA_COLLECTION_NAME=documents
+          EMBEDDING_MODEL=intfloat/multilingual-e5-large
+          EMBEDDING_DEVICE=cpu
+          BATCH_SIZE=32
+          MAX_FILE_SIZE=10485760
+          ALLOWED_EXTENSIONS=["pdf","txt","docx"]
+          CHUNK_SIZE=512
+          CHUNK_OVERLAP=128
+          DEFAULT_TOP_K=5
+          MAX_TOP_K=50
+          UPLOAD_TEMP_DIR=./data/uploads
+          ENABLE_ASYNC_PROCESSING=true
+          EOF
+          
+          # AWS secrets 추가
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env.production
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env.production
+          echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env.production
+
+      - name: Prepare EC2 directories
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            mkdir -p ~/Backend/data/{uploads,chroma_data,huggingface_cache}
+          EOF
+
+      - name: Copy files to EC2
+        run: |
+          scp .env.production ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/Backend/.env.local
+          scp docker-compose.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/Backend/
+          scp nginx.conf ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/Backend/
+
+      - name: Deploy to EC2
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            set -e
+            cd ~/Backend
+            
+            # 인프라 확인
+            if ! docker-compose ps | grep -q "chromadb.*Up"; then
+              docker-compose up -d chromadb nginx
+              sleep 15
+            fi
+            
+            # 백엔드 배포
+            docker-compose pull backend
+            docker-compose up -d --no-deps backend
+            
+            # 헬스 체크
+            sleep 10
+            for i in {1..12}; do
+              if curl -f http://localhost/health > /dev/null 2>&1; then
+                echo "✅ 배포 완료!"
+                exit 0
+              fi
+              sleep 5
+            done
+            
+            echo "❌ 헬스 체크 실패"
+            docker-compose logs --tail=50 backend
+            exit 1
+          EOF
