--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('requirements.txt', 'Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/krafton_jungle10_team4:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
       - name: Setup SSH
         env:
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
@@ -23,20 +54,6 @@ jobs:
           echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and Push Docker Image
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: |
-          docker build -t ${DOCKERHUB_USERNAME}/krafton_jungle10_team4:latest .
-          docker push ${DOCKERHUB_USERNAME}/krafton_jungle10_team4:latest
-          echo "✅ Docker 이미지 빌드 및 푸시 완료"
 
       - name: Create .env.production
         run: |
@@ -90,39 +107,24 @@ jobs:
             set -e
             cd ~/Backend
             
-            echo "🔍 인프라 서비스 확인 중..."
             if ! docker-compose ps | grep -q "chromadb.*Up"; then
-              echo "📦 인프라 서비스 시작 (ChromaDB, Nginx)..."
               docker-compose up -d chromadb nginx
-              echo "⏳ ChromaDB 초기화 대기..."
               sleep 15
             fi
             
-            echo "🐳 최신 이미지 다운로드 중..."
             docker-compose pull backend
-            
-            echo "🔨 백엔드 컨테이너 재시작 중..."
             docker-compose up -d --no-deps backend
             
-            echo "⏳ 서비스 헬스 체크 중..."
             sleep 10
-            
             for i in {1..12}; do
               if curl -f http://localhost/health > /dev/null 2>&1; then
                 echo "✅ 배포 완료!"
-                echo ""
-                echo "📊 실행 중인 컨테이너:"
-                docker-compose ps
-                echo ""
-                echo "📝 최근 로그:"
-                docker-compose logs --tail=20 backend
                 exit 0
               fi
-              echo "   대기 중... ($i/12)"
               sleep 5
             done
             
-            echo "❌ 헬스 체크 실패 - 로그 확인:"
+            echo "❌ 헬스 체크 실패"
             docker-compose logs --tail=50 backend
             exit 1
           EOF
