--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-multipart==0.0.6
+python-dotenv==1.0.0
 
 # 문서 처리
 pypdf==3.17.4
 python-docx==1.1.0
 
-# 임베딩 (torch는 Dockerfile에서 이미 설치됨)
+# PyTorch CPU 버전 (호환성 있는 버전)
+torch==2.1.2
+transformers==4.36.2
 sentence-transformers==2.3.1
 
 # Vector DB
@@ -23,4 +26,4 @@ tiktoken==0.5.2
 # 유틸리티
 aiofiles==23.2.1
 tenacity==8.2.3
-python-dotenv==1.0.0
+boto3==1.34.0
