--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,9 @@ python-dotenv==1.0.0
 pypdf==3.17.4
 python-docx==1.1.0
 
-# PyTorch CPU 버전 (호환성 있는 버전)
-torch==2.1.2
+# PyTorch CPU 전용 
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.2+cpu
 transformers==4.36.2
 sentence-transformers==2.3.1
 
@@ -26,4 +27,3 @@ tiktoken==0.5.2
 # 유틸리티
 aiofiles==23.2.1
 tenacity==8.2.3
-boto3==1.34.0
