--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ python-dotenv==1.0.0
 # 문서 처리
 pypdf==3.17.4
 python-docx==1.1.0
+unstructured==0.11.0
 
-# PyTorch CPU 전용 
+# PyTorch CPU 전용
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.1.2+cpu
 transformers==4.36.2
