--- a/nginx.conf
+++ b/nginx.conf
@@ -3,19 +3,18 @@ events {
 }
 
 http {
+    resolver 127.0.0.11 valid=30s;
+    
     upstream backend {
-        server backend:8001;
+        server backend:8001 max_fails=3 fail_timeout=30s;
     }
 
-    # FastAPI 백엔드 (포트 80)
     server {
         listen 80;
         server_name _;
 
-        # 클라이언트 최대 업로드 크기 (파일 업로드용)
         client_max_body_size 20M;
 
-        # 타임아웃 설정 (임베딩 처리 시간 고려)
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
         proxy_read_timeout 300;
@@ -29,7 +28,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Health check
         location /health {
             proxy_pass http://backend/health;
             access_log off;
