--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ python-dotenv==1.0.0
 # 문서 처리
 pypdf==3.17.4
 python-docx==1.1.0
-unstructured==0.11.0
+pdf2image==1.16.3
+pillow==10.1.0
+pytesseract==0.3.10
+unstructured[pdf]==0.11.0
 
 # PyTorch CPU 전용
 --extra-index-url https://download.pytorch.org/whl/cpu
