--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,10 @@ torch==2.1.2+cpu
 transformers==4.36.2
 sentence-transformers==2.3.1
 
-# Vector DB
+# Vector DB (ChromaDB에 필요한 모든 의존성)
 chromadb==0.4.22
+onnxruntime==1.16.3
+tokenizers==0.15.0
 
 # LangChain
 langchain==0.1.0
