--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,6 @@ python-dotenv==1.0.0
 # 문서 처리
 pypdf==3.17.4
 python-docx==1.1.0
-pdf2image==1.16.3
-pillow==10.1.0
-pytesseract==0.3.10
-unstructured[pdf]==0.11.0
 
 # PyTorch CPU 전용
 --extra-index-url https://download.pytorch.org/whl/cpu
@@ -20,10 +16,9 @@ torch==2.1.2+cpu
 transformers==4.36.2
 sentence-transformers==2.3.1
 
-# Vector DB (ChromaDB에 필요한 모든 의존성)
+# Vector DB
 chromadb==0.4.22
 onnxruntime==1.16.3
-tokenizers==0.15.0
 
 # LangChain
 langchain==0.1.0
