--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,35 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/backend:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/backend:buildcache,mode=max
+          platforms: linux/amd64
+
   deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
@@ -28,45 +56,16 @@ jobs:
         env:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          tar -czf deploy.tar.gz app/ requirements.txt Dockerfile docker-compose.yml nginx.conf
-          
-          scp -o StrictHostKeyChecking=no deploy.tar.gz ${EC2_USER}@${EC2_HOST}:~/Backend/
-          
+          # deploy.sh만 전송
+          scp -o StrictHostKeyChecking=no scripts/deploy.sh ${EC2_USER}@${EC2_HOST}:~/Backend/
+
           ssh -o StrictHostKeyChecking=no \
               -o ServerAliveInterval=60 \
               -o ServerAliveCountMax=30 \
-              ${EC2_USER}@${EC2_HOST} << 'ENDSSH'
+              ${EC2_USER}@${EC2_HOST} << ENDSSH
             cd ~/Backend
-            
-            # .env.local 백업
-            [ -f .env.local ] && cp .env.local .env.backup
-            
-            # 압축 해제
-            tar -xzf deploy.tar.gz
-            rm deploy.tar.gz
-            
-            # .env.local 복원
-            [ -f .env.backup ] && mv .env.backup .env.local
-            
-            # .env 확인
-            if [ ! -f .env.local ]; then
-              echo "❌ .env.local 없음"
-              exit 1
-            fi
-            
-            # 인프라 확인
-            if ! docker-compose ps 2>/dev/null | grep -q "chromadb.*Up"; then
-              docker-compose up -d chromadb nginx
-              sleep 15
-            fi
-            
-            # 빌드 & 배포 (백그라운드)
-            nohup bash -c '
-              docker-compose build backend && \
-              docker-compose up -d --no-deps backend
-            ' > ~/deploy.log 2>&1 &
-            
-            echo "✅ 배포 시작"
-            sleep 10
+            chmod +x deploy.sh
+            DOCKER_IMAGE="${DOCKERHUB_USERNAME}/backend:latest" ./deploy.sh
           ENDSSH
