--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,8 @@ python-dotenv==1.0.0
 pypdf==3.17.4
 python-docx==1.1.0
 
-# PyTorch CPU 전용
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.1.2+cpu
+# PyTorch (ARM64/x86_64 호환)
+torch==2.1.2
 transformers==4.36.2
 sentence-transformers==2.3.1
 
@@ -24,7 +23,8 @@ langchain-community==0.0.13
 tiktoken==0.5.2
 
 # LLM 클라이언트
-openai==1.12.0
+openai==1.54.0
+httpx==0.27.2
 langchain-openai==0.0.5
 
 # 유틸리티
