feat: Rate Limiting 미들웨어 구현 및 통합 테스트 완료
  - docker-compose.yml: Redis requirepass 옵션 제거 (개발 환경)
  - app/main.py: /health 엔드포인트에 Rate Limiting 데코레이터 적용
  - 통합 테스트: HTTP 429 응답 및 JSON 포맷 검증 완료
  - Redis storage 기반 분산 Rate Limiting 정상 동작 확인

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,8 @@ services:
       timeout: 10s # 10초 타임아웃
       retries: 3 # 3번 실패하면 헬스체크 실패
     restart: unless-stopped # 실패 시 재시작
-    # Redis 서버 실행 명령. AOF 모드 활성화 및 비밀번호 설정 (환경변수에서 로드, 없으면 비밀번호 없음)
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
+    # Redis 서버 실행 명령. AOF 모드 활성화 (개발 환경에서는 비밀번호 없음)
+    command: redis-server --appendonly yes
 
   backend:
     build:
