feat: AWS 프로덕션 배포를 위한 인프라 마이그레이션
  - ChromaDB → PostgreSQL pgvector 벡터 스토어 전환
  - Sentence-Transformers → AWS Bedrock Titan Embeddings
  마이그레이션
  - ElastiCache Redis TLS 지원 추가 (rediss://)
  - GitHub Actions ECS 자동 배포 워크플로우 추가
  - pgvector 초기화 스크립트 및 마이그레이션 도구 구현
  - AWS 배포 가이드 문서화 (3개 문서 통합)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
-    image: postgres:16-alpine
+    # pgvector 지원을 위해 pgvector/pgvector 이미지 사용
+    image: pgvector/pgvector:pg16
     platform: linux/arm64
     container_name: postgres_db
     env_file:
@@ -9,6 +10,8 @@ services:
       - "5432:5432"
     volumes:
       - ./data/postgres_data:/var/lib/postgresql/data
+      # pgvector 초기화 스크립트 (자동 실행)
+      - ./scripts/init_pgvector.sql:/docker-entrypoint-initdb.d/init_pgvector.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 10s
