fix: ECS container 이름
+ 사용하지 않는 서버배포 파일 삭제

--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -12,7 +12,7 @@ env:
   ECS_CLUSTER: rag-cluster
   ECS_SERVICE: rag-backend-service
   ECS_TASK_DEFINITION: rag-backend-task
-  CONTAINER_NAME: backend
+  CONTAINER_NAME: rag-backend
 
 jobs:
   deploy:
