feat: 환경 설정 파일 분리
.env.example 생성
.gitignore에 추가
내부적으로 .env.local와 .env.production을 분리

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ ENV/
 # 환경 변수
 .env
 .env.local
+.env.staging
 .env.production
 .env.*.local
 
@@ -43,7 +44,6 @@ coverage.xml
 .env/
 .env.local
 .env.*.local
-.env.example
 .mcp.json
 
 
