chore: Slack OAuth 연동을 위한 패키지 추가
- slack-sdk==3.38.0 추가 (Slack API 클라이언트)
- cryptography==42.0.8 추가 (토큰 암호화용 Fernet)

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,12 @@ slowapi==0.1.9  # Rate limiting
 # Redis
 redis==5.0.1
 
+# Slack SDK
+slack-sdk==3.38.0
+
+# 암호화 (Slack OAuth token encryption)
+cryptography==42.0.8
+
 # 데이터베이스
 sqlalchemy==2.0.25
 alembic==1.13.1
